TEST_PROGRAMS/VALID/05/binary_shift_right.go
/* Binary shift right. */
package main

func main() {
	x:=1
	println(x>>1)
}
