TEST_PROGRAMS/INVALID/07/switch_invalid_default_exp.go
//testing switch-taken from go specification example
package main

func main () {
switch tag{
	default x>0: s3()
	
	}
}
	
